--- a/Prevu.Synoptics.V2150_Planeta/P020.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/P020.xaml
@@ -10,8 +10,8 @@
              x:Class="Prevu.Synoptics.P020" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="134" StatusComponent="098-01-MA1" PipeHeight="Medium" Height="14" Canvas.Left="1318" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="132" StatusComponent="096-01-MA1" PipeHeight="Medium" Canvas.Left="1167" Canvas.Top="673" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="134" StatusComponent="098-01-MA1" PipeHeight="Medium" Height="14" Canvas.Left="1318" Canvas.Top="684" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="100" StatusComponent="096-01-MA1" PipeHeight="Medium" Canvas.Left="1184" Canvas.Top="630" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -21,7 +21,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="124" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1026" Canvas.Top="555" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="76" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1050" Canvas.Top="550" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -42,7 +42,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="78" StatusComponent="024-01-MA1" PipeHeight="Medium" Canvas.Left="599" Canvas.Top="372" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1025" Canvas.Top="498" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1025" Canvas.Top="516" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="89" VerticalAlignment="Center" Canvas.Top="739" StatusComponent="029-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="334" Height="24" HorizontalAlignment="Left" Color="Air">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -215,7 +215,7 @@
         <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="553" Canvas.Top="741" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="027-01-MA1" Canvas.Left="620" Canvas.Top="771" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="220" StatusComponent="028-01-MA1" PipeHeight="Medium" Canvas.Left="743" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="298" StatusComponent="028-01-MA1" PipeHeight="Medium" Canvas.Left="704" Canvas.Top="388" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -225,7 +225,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="54" StatusComponent="031-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="952" Canvas.Top="569" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="54" StatusComponent="031-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="952" Canvas.Top="587" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -235,7 +235,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="54" StatusComponent="031-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="860" Canvas.Top="569" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="54" StatusComponent="031-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="860" Canvas.Top="587" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -245,11 +245,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <DCE:VRR_DryTrommel Canvas.Left="831" Canvas.Top="439" HorizontalAlignment="Center" VerticalAlignment="Top" Height="123" Width="201"/>
+        <DCE:VRR_DryTrommel Canvas.Left="831" Canvas.Top="457" HorizontalAlignment="Center" VerticalAlignment="Top" Height="123" Width="201"/>
         <Labels:DeviceLabel 
-            ComponentName="030-01-MA1" Canvas.Left="992" Canvas.Top="384" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="865" Canvas.Top="578" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="957" Canvas.Top="578" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="030-01-MA1" Canvas.Left="992" Canvas.Top="402" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="865" Canvas.Top="596" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="957" Canvas.Top="596" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="240" StatusComponent="027-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1006" Canvas.Top="171" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -306,17 +306,17 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="098-01-MA1" 
-            JumpToLabel="100-01-MA1" Canvas.Left="1404" Canvas.Top="714"/>
-        <Labels:Pipe Width="64" StatusComponent="096-01-MA1" PipeHeight="Medium" Canvas.Left="1173" Canvas.Top="612" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="1201" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="1060" Canvas.Top="607" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            JumpToLabel="100-01-MA1" Canvas.Left="1404" Canvas.Top="656"/>
+        <Labels:Pipe Width="36" StatusComponent="096-01-MA1" PipeHeight="Medium" Canvas.Left="1203" Canvas.Top="585" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:NT_ConveyorBelt Height="1" Width="152" Canvas.Left="1201" Canvas.Top="680" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:NT_ConveyorBelt Height="1" Width="154" Canvas.Left="1060" Canvas.Top="580" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
-            ComponentName="098-01-MA1" Canvas.Left="1291" Canvas.Top="678" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="098-01-MA1" Canvas.Left="1255" Canvas.Top="625" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
-            ComponentName="096-01-MA1" Canvas.Left="1151" Canvas.Top="547" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="096-01-MA1" Canvas.Left="1114" Canvas.Top="525" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="165" Canvas.Top="65" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="028-LUB" DetailsPageName="D028" Canvas.Left="973" Canvas.Top="140" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
