--- a/Prevu.Synoptics.V2150_Planeta/P100.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/P100.xaml
@@ -33,7 +33,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="341" Color="Water" StatusComponent="111-01-MA1" Canvas.Left="486" Canvas.Top="601" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="210" Color="Water" StatusComponent="111-01-MA1" Canvas.Left="823" Canvas.Top="779" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="102" StatusComponent="120-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1158" Canvas.Top="547" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="50" StatusComponent="120-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1184" Canvas.Top="521" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -63,7 +63,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" VisibilityComponent="450-23-CV3" Canvas.Left="791" Canvas.Top="379" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" Canvas.Left="791" Canvas.Top="379" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -73,7 +73,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="125" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" VisibilityComponent="450-23-CV3" Canvas.Left="722" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="125" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" Canvas.Left="722" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -129,22 +129,12 @@
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="87" StatusComponent="115-21-CV1" Canvas.Left="285" Canvas.Top="454" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="242" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="436" Canvas.Top="740"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="36" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1388" Canvas.Top="606">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="36" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1332" Canvas.Top="557">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="83" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1325" Canvas.Top="590">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
@@ -179,8 +169,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="167" Color="Water" StatusComponent="104-01-MA1" VisibilityComponent="450-23-CV3" Canvas.Left="912" Canvas.Top="447"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="254" RenderTransformOrigin="0.5,0.5" StatusComponent="104-01-MA1" VisibilityComponent="450-23-CV3" Canvas.Left="950" Canvas.Top="572">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="167" Color="Water" StatusComponent="104-01-MA1" Canvas.Left="912" Canvas.Top="447"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="254" RenderTransformOrigin="0.5,0.5" StatusComponent="104-01-MA1" Canvas.Left="950" Canvas.Top="572">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -190,7 +180,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="134" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" VisibilityComponent="450-23-CV3" Canvas.Left="657" Canvas.Top="262">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="134" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" Canvas.Left="657" Canvas.Top="262">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -200,7 +190,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Height="5" Canvas.Left="988" Canvas.Top="663">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Height="5" Canvas.Left="1076" Canvas.Top="673">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -220,7 +210,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="105" StatusComponent="293-01-MA1" Canvas.Left="944" Canvas.Top="606"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="Water" Width="105" StatusComponent="293-01-MA1" Canvas.Left="1133" Canvas.Top="616"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="146" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="1298" Canvas.Top="430"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="46" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="654" Canvas.Top="498">
             <Labels:Pipe.RenderTransform>
@@ -389,7 +379,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="1384" Canvas.Top="607"/>
+        <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="1328" Canvas.Top="558"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="1420" Canvas.Top="200"/>
         <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="649" Canvas.Top="651">
             <Machines:External.RenderTransform>
@@ -401,7 +391,7 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Machines:NT_ConveyorBelt Height="1" Width="171" Canvas.Left="1189" Canvas.Top="583" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="1" Width="171" Canvas.Left="1189" Canvas.Top="534" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1144" Canvas.Top="127" HorizontalAlignment="Center" Height="50" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1338" Canvas.Top="127" Height="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="655" Canvas.Top="502" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -480,7 +470,7 @@
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
             JumpFromLabel="110-41-LT1" 
-            JumpToLabel="293-01-MA1" RenderTransformOrigin="-0.711,0.53" Canvas.Left="898" Canvas.Top="573"/>
+            JumpToLabel="293-01-MA1" RenderTransformOrigin="-0.711,0.53" Canvas.Left="1216" Canvas.Top="584" Direction="Left"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="120-01-MA1" 
@@ -529,7 +519,7 @@
             ComponentName="120-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1000" Canvas.Top="284"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="127-01-MA1" Canvas.Left="1310" Canvas.Top="528"/>
+            ComponentName="127-01-MA1" Canvas.Left="1371" Canvas.Top="517"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="121-01-MA1" Canvas.Left="1124" Canvas.Top="72"/>
