--- a/Prevu.Synoptics.V2150_Planeta/P140.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/P140.xaml
@@ -22,7 +22,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
 
-        <Labels:Pipe Width="91" StatusComponent="197-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="200" Canvas.Top="78" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="109" StatusComponent="197-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="183" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,7 +32,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="70" StatusComponent="197-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="254" Canvas.Top="111" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="124" StatusComponent="197-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="123" Canvas.Top="129" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -87,7 +87,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
 
-        <Labels:Pipe Width="627" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="90" Canvas.Top="453" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="770" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="90" Canvas.Top="453" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -98,7 +98,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
 
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="259" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="408" Canvas.Top="286"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="189" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="618" Canvas.Top="286"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="60" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="78" Canvas.Top="528">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -109,8 +109,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="115" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="168" Canvas.Top="148"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="214" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="1066" Canvas.Top="395">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="115" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="112" Canvas.Top="188"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="214" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="1146" Canvas.Top="395">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -120,7 +120,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="54" StatusComponent="128-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="258" Canvas.Top="234">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="160" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="849" Canvas.Top="375">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -130,17 +130,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="160" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="709" Canvas.Top="375">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="127" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="1210" Canvas.Top="288"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="127" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="1270" Canvas.Top="288"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="40" StatusComponent="153-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="300" Canvas.Top="577">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -151,7 +141,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="1069" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="106" Canvas.Top="500">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="1149" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="106" Canvas.Top="500">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -181,11 +171,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="106" StatusComponent="126-01-MA1" PipeHeight="Medium" Canvas.Left="399" Canvas.Top="148"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="158" StatusComponent="180-01-MA1" Height="14" Canvas.Left="1252" Canvas.Top="619" Color="ByProduct"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="239" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="807" Canvas.Top="288"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="351" StatusComponent="128-01-MA1" PipeHeight="Medium" Canvas.Left="280" Canvas.Top="211"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="70" StatusComponent="128-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="593" Canvas.Top="180">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="76" StatusComponent="126-01-MA1" PipeHeight="Medium" Canvas.Left="261" Canvas.Top="224" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -195,6 +181,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="158" StatusComponent="180-01-MA1" Height="14" Canvas.Left="1252" Canvas.Top="619" Color="ByProduct"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="239" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="867" Canvas.Top="288"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" StatusComponent="128-01-MA1" PipeHeight="Medium" Canvas.Left="414" Canvas.Top="262"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="3" Width="165" RenderTransformOrigin="0.5,0.5" Canvas.Left="306" Canvas.Top="597"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="3" Width="146" RenderTransformOrigin="0.5,0.5" Canvas.Left="568" Canvas.Top="596">
             <Machines:NT_ConveyorBelt.RenderTransform>
@@ -216,17 +205,17 @@
                 </TransformGroup>
             </Machines:NT_ConveyorBelt.RenderTransform>
         </Machines:NT_ConveyorBelt>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="1" Width="144" Canvas.Left="505" Canvas.Top="142"/>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="1" Width="144" Canvas.Left="267" Canvas.Top="143"/>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="1" Width="184" Canvas.Left="635" Canvas.Top="282"/>
+        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="1" Width="144" Canvas.Left="288" Canvas.Top="256"/>
+        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="1" Width="144" Canvas.Left="167" Canvas.Top="183"/>
+        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="1" Width="184" Canvas.Left="775" Canvas.Top="282"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="1" Width="180" Canvas.Left="1053" Canvas.Top="753"/>
-        <Machines:EC_Metal_Detector HorizontalAlignment="Left" Width="31" Canvas.Left="756" Canvas.Top="251" VerticalAlignment="Center"/>
-        <VibratingScreens:ALV_VibratingFeeder VerticalAlignment="Top" Height="78" Canvas.Left="272" Canvas.Top="258" HorizontalAlignment="Center"/>
+        <Machines:EC_Metal_Detector HorizontalAlignment="Left" Width="31" Canvas.Left="896" Canvas.Top="251" VerticalAlignment="Center"/>
+        <VibratingScreens:ALV_VibratingFeeder VerticalAlignment="Center" Height="78" Canvas.Left="517" Canvas.Top="258" HorizontalAlignment="Left"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="1041" Canvas.Top="776"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-      VerticalAlignment="Center" 
+        <Labels:JumpLabel HorizontalAlignment="Center" 
+      VerticalAlignment="Top" 
       JumpFromLabel="126-01-MA1" 
-      JumpToLabel="120-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="86" Canvas.Top="118">
+      JumpToLabel="120-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="30" Canvas.Top="158">
             <Labels:JumpLabel.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -240,13 +229,13 @@
             VerticalAlignment="Center" 
             JumpFromLabel="180-01-MA1" 
             JumpToLabel="197-01-MA1" Canvas.Left="1382" Canvas.Top="591"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
             JumpFromLabel="150-01-MA1" 
-            JumpToLabel="165-01-MA1" Canvas.Left="1313" Canvas.Top="258"/>
+            JumpToLabel="165-01-MA1" Canvas.Left="1373" Canvas.Top="258"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="128-01-MA1" Canvas.Left="589" Canvas.Top="87"/>
+            ComponentName="128-01-MA1" Canvas.Left="351" Canvas.Top="283"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="153-01-MA1" Canvas.Left="73" Canvas.Top="579"/>
@@ -257,20 +246,20 @@
             VerticalAlignment="Center" 
             ComponentName="155-01-MA1" Height="50" Width="90" Canvas.Left="307" Canvas.Top="622"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="126-01-MA1" Canvas.Left="329" Canvas.Top="88"/>
+            VerticalAlignment="Top" 
+            ComponentName="126-01-MA1" Canvas.Left="298" Canvas.Top="129"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="183-01-MA1" Canvas.Left="1054" Canvas.Top="696"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="129-01-MA1" Canvas.Left="293" Canvas.Top="332"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="129-01-MA1" Canvas.Left="538" Canvas.Top="332"/>
         <VibratingScreens:ALV_VibratingFeeder Height="78" Canvas.Left="837" Canvas.Top="592" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="179-01-MA1" Canvas.Left="858" Canvas.Top="666" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel 
             JumpFromLabel="126-01-MA1" 
-            JumpToLabel="197-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="121" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center">
+            JumpToLabel="197-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="254" Canvas.Top="37" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left">
             <Labels:JumpLabel.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -280,7 +269,7 @@
                 </TransformGroup>
             </Labels:JumpLabel.RenderTransform>
         </Labels:JumpLabel>
-        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="664" Canvas.Top="446" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="804" Canvas.Top="446" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:NT_ConveyorBelt.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="1"/>
@@ -291,11 +280,11 @@
             </Machines:NT_ConveyorBelt.RenderTransform>
         </Machines:NT_ConveyorBelt>
         <Labels:DeviceLabel 
-            ComponentName="143-01-MA1" Canvas.Left="648" Canvas.Top="391" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="140-SORT" DetailsPageName="D140" Canvas.Left="692" Canvas.Top="226" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:NT_ConveyorBelt Height="1" Width="184" Canvas.Left="1031" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:EC_Metal_Detector Width="31" Canvas.Left="1152" Canvas.Top="252" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="150-SORT" DetailsPageName="D150" Canvas.Left="1088" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="143-01-MA1" Canvas.Left="788" Canvas.Top="391" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="140-SORT" DetailsPageName="D140" Canvas.Left="832" Canvas.Top="226" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:NT_ConveyorBelt Height="1" Width="184" Canvas.Left="1091" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:EC_Metal_Detector Width="31" Canvas.Left="1212" Canvas.Top="252" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="150-SORT" DetailsPageName="D150" Canvas.Left="1148" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="1" Width="184" Canvas.Left="1083" Canvas.Top="615" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:EC_Metal_Detector Width="31" Canvas.Left="1204" Canvas.Top="583" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="180-SORT" DetailsPageName="D180" Canvas.Left="1140" Canvas.Top="559" HorizontalAlignment="Left" VerticalAlignment="Center"/>
