--- a/Prevu.Synoptics.V2150_Planeta/P170.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/P170.xaml
@@ -12,8 +12,8 @@
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
 
-        <Labels:Pipe Width="85" StatusComponent="195-01-MA1" Height="14" RenderTransformOrigin="0.5,0.5" Canvas.Left="1148" Canvas.Top="598" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="138" StatusComponent="195-01-MA1" Height="14" RenderTransformOrigin="0.5,0.5" Canvas.Left="1162" Canvas.Top="665" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="85" StatusComponent="195-01-MA1" Height="14" RenderTransformOrigin="0.5,0.5" Canvas.Left="1148" Canvas.Top="556" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="180" StatusComponent="195-01-MA1" Height="14" RenderTransformOrigin="0.5,0.5" Canvas.Left="1141" Canvas.Top="644" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -40,7 +40,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
 
-        <Labels:Pipe Width="44" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="200" Canvas.Top="469" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="44" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="200" Canvas.Top="507" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -51,7 +51,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
 
-        <Labels:Pipe Width="156" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="94" Canvas.Top="525" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="156" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="94" Canvas.Top="563" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -119,7 +119,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
 
-        <Labels:Pipe Width="455" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="114" Canvas.Top="449" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="454" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="114" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -129,7 +129,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="242" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="-5" Canvas.Top="568">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="242" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="-5" Canvas.Top="606">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -139,7 +139,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="234" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="16" Canvas.Top="574" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="234" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="16" Canvas.Top="612" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -149,7 +149,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="146" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="116" Canvas.Top="531" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="146" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="116" Canvas.Top="569" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -159,7 +159,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="36" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="221" Canvas.Top="476" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="36" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="221" Canvas.Top="514" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -169,7 +169,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="204" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="31" Canvas.Top="339" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="242" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="12" Canvas.Top="358" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -179,7 +179,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="204" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="87" Canvas.Top="339" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="242" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="68" Canvas.Top="358" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -189,7 +189,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="204" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="137" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="242" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="118" Canvas.Top="359" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -244,7 +244,7 @@
         </Labels:Pipe>
 
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="115" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="170" Canvas.Top="112"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="28" StatusComponent="161-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="353" Canvas.Top="515">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="28" StatusComponent="161-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="353" Canvas.Top="553">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -265,7 +265,7 @@
                 </TransformGroup>
             </Machines:NT_ConveyorBelt.RenderTransform>
         </Machines:NT_ConveyorBelt>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="213" Canvas.Top="488">
+        <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="213" Canvas.Top="526">
             <Machines:NT_ConveyorBelt.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="1"/>
@@ -275,7 +275,7 @@
                 </TransformGroup>
             </Machines:NT_ConveyorBelt.RenderTransform>
         </Machines:NT_ConveyorBelt>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="345" Canvas.Top="514"/>
+        <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="345" Canvas.Top="552"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
       VerticalAlignment="Top" 
       JumpFromLabel="165-01-MA1" 
@@ -289,9 +289,9 @@
                 </TransformGroup>
             </Labels:JumpLabel.RenderTransform>
         </Labels:JumpLabel>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="161-01-MA1" Canvas.Left="213" Canvas.Top="514"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="161-01-MA1" Canvas.Left="213" Canvas.Top="552"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="192-01-MA1" Canvas.Left="707" Canvas.Top="680"/>
@@ -310,7 +310,7 @@
         </Machines:SCW_ScrewConveyor_straight>
         <Labels:DeviceLabel 
             ComponentName="165-01-MA1" Canvas.Left="374" Canvas.Top="53" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="28" StatusComponent="162-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="302" Canvas.Top="617" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="28" StatusComponent="162-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="302" Canvas.Top="655" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -320,7 +320,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="162" Canvas.Top="590" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="162" Canvas.Top="628" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:NT_ConveyorBelt.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="1"/>
@@ -330,10 +330,10 @@
                 </TransformGroup>
             </Machines:NT_ConveyorBelt.RenderTransform>
         </Machines:NT_ConveyorBelt>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="294" Canvas.Top="616" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="294" Canvas.Top="654" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
-            ComponentName="162-01-MA1" Canvas.Left="162" Canvas.Top="616" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="28" StatusComponent="163-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="242" Canvas.Top="715" HorizontalAlignment="Left" VerticalAlignment="Center">
+            ComponentName="162-01-MA1" Canvas.Left="162" Canvas.Top="654" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="28" StatusComponent="163-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="242" Canvas.Top="753" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -343,7 +343,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="102" Canvas.Top="688" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="102" Canvas.Top="726" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:NT_ConveyorBelt.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="1"/>
@@ -353,9 +353,9 @@
                 </TransformGroup>
             </Machines:NT_ConveyorBelt.RenderTransform>
         </Machines:NT_ConveyorBelt>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="234" Canvas.Top="714" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="234" Canvas.Top="752" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
-            ComponentName="163-01-MA1" Canvas.Left="102" Canvas.Top="714" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="163-01-MA1" Canvas.Left="102" Canvas.Top="752" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="70" StatusComponent="175-01-MA1" PipeHeight="Medium" Height="14" RenderTransformOrigin="0.5,0.5" Canvas.Left="1064" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="LS1" VisibilityComponent="175-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -397,7 +397,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="64" StatusComponent="208-01-MA1" PipeHeight="Medium" Height="14" Canvas.Left="1337" Canvas.Top="467" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="74" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="529" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="112" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" Canvas.Left="510" Canvas.Top="432" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -510,7 +510,7 @@
         <Labels:DetailsLabel ComponentName="195-SORT" DetailsPageName="D195" Canvas.Left="970" Canvas.Top="599" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel 
             JumpFromLabel="197-01-MA1" 
-            JumpToLabel="180-01-MA1" Canvas.Left="1112" Canvas.Top="570" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            JumpToLabel="180-01-MA1" Canvas.Left="1112" Canvas.Top="528" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
     </Canvas>
 </UserControl>
